--- a/Code/frontend/package.json
+++ b/Code/frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.12"
+    "bootstrap": "5.3.3",
+    "vue": "^3.5.12",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
