--- a/Code/frontend/package.json
+++ b/Code/frontend/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.11.3",
     "vue": "^3.5.12",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
