--- a/Code/frontend/package.json
+++ b/Code/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.6",
     "vue": "^3.5.12",
     "vue-router": "4",
     "vuex": "^4.0.2"
